new arch diagram

--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -93,7 +93,7 @@ multi-messenger astronomy.
 \begin{figure}[H]
 \centering
 
-\includegraphics[width=0.9\textwidth]{archdiag.png}
+\includegraphics[width=0.9\textwidth]{role_diagram.pdf}
 \label{fig:architecture}
 \end{figure}
 
