--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -91,7 +91,7 @@ multi-messenger astronomy.
 
 
 
-\includegraphics[width=0.9\textwidth]{archdiag.png}
+%\includegraphics[width=0.9\textwidth]{archdiag.png}
 \label{fig:architecture}
 \end{figure}
 
@@ -154,7 +154,7 @@ The ObsCore parameter t\_resolution, defined as the minimal interpretable interv
 time axis (being it an average or representative value), has a limited application for SD data except for on-source tracking
 observations like those for pulsar/FRB studies.
 Typically, time is not an independent variable in SD measurements and it can be saved together with spatial/spectral/intensity
-information as a timestamp associated to each data sample.
+information as a timestamp associated to each data sample
 A more comprehensive discussion on ObsCore parameters for time-domain data is given in the Pulsar
 and FRB Radio Data Discovery and Access IVOA Note\footnote{\url{https://wiki.ivoa.net/internal/IVOA/RadioastronomyInterestGroupFifthVirtualMeeting/PulsarRadioDataAccess.pdf}}.
 %Even in the case of on-source tracking, time information in SD data is not intended for time domain studies.
