--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -92,8 +92,8 @@ multi-messenger astronomy.
 
 
 %\includegraphics[width=0.9\textwidth]{archdiag.png}
-\label{fig:architecture}
-\end{figure}
+%\label{fig:architecture}
+%\end{figure}
 
 % Mireille : it seems this is not the good diagram but the one of SIA
 % change architexture diag
