--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -461,7 +461,7 @@ response  will contain \#auxiliary  for links to these maps or plots while  the 
 %\end{lstlisting}
 The ObsCore Extension for Radio data is accessed in a table containing also ObsCore fields within a TAP
 \citep{2019ivoa.spec.0927D} service.\todo{I think we should require a
-few UDFs on TAP services: ivo_interval_overlaps, ivo_specconv} At this
+few UDFs on TAP services: ivo\_interval\_overlaps, ivo\_specconv} At this
 point, the name of this table is fixed to \verb|ivoa.obscore_radio|.
 However, in order to allow for later evolution -- which may allow
 multiple compliant tables per service --, this name should not be used
