--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -31,7 +31,7 @@
 \author{Mattia Mancini}
 \author{Peter Teuben}
 \author{Alessandra Zanichelli}
-\author{Markus Demleitner}
+
 
 
 
@@ -641,7 +641,7 @@ record with the main TAP service as an auxiliary capability
 on coverage in space, time, and spectraum as per VODataService 1.2 can
 be communicated to the Registry, which, again, data providers are urged
 to do. There is no expectation that the coverage information only
-pertains to data with entries in \verb|ivoa.obs_radio|, i.e., it may be
+pertains to data with entries in \verb|ivoa.obs\_radio|, i.e., it may be
 a copy of the coverage of the basic Obscore table.\todo{Is that
 acceptable? Or should we require pure radio coverage?}
 
@@ -650,7 +650,7 @@ specification\footnote{\auxiliaryurl{sample-record.xml}}.
 
 To obtain access URLs of all TAP services that have compliant tables
 together with their table names (which in this major version are fixed
-to \verb|ivoa.obscore_radio|), use a RegTAP \citep{2019ivoa.spec.1011D}
+to \verb|ivoa.obscore\_radio|), use a RegTAP \citep{2019ivoa.spec.1011D}
 query like:
 
 \begin{lstlisting}
