--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -645,7 +645,7 @@ pertains to data with entries in \verb|ivoa.obs\_radio|, i.e., it may be
 a copy of the coverage of the basic Obscore table.\todo{Is that
 acceptable? Or should we require pure radio coverage?}
 
-A sample registry record for an obscore_radio table comes with this
+A sample registry record for an obscore\_radio table comes with this
 specification\footnote{\auxiliaryurl{sample-record.xml}}.
 
 To obtain access URLs of all TAP services that have compliant tables
