modif architecture diagram

--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -98,7 +98,7 @@ multi-messenger astronomy.
 \end{figure}
 
 % Mireille : it seems this is not the good diagram but the one of SIA 
-% change architexture diag
+% change architecture diag
 
 %The role of this Visibility ObsCore extension in the IVOA is very close to ObsCore itself. It's only a fine grain improvement of this specification. 
 % Mireille's  suggestion 
