includegraphics new arch diag

--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -91,7 +91,7 @@ multi-messenger astronomy.
 
 
 
-%\includegraphics[width=0.9\textwidth]{archdiag.png}
+\includegraphics[width=0.9\textwidth]{role_diagram.pdf}
 %\label{fig:architecture}
 %\end{figure}
 
