figure arch diag + label + caption

--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -90,10 +90,11 @@ multi-messenger astronomy.
 %optical interferometry data. The extension we are defining here is valid for both domains.
 
 
-
+\begin{figure}
 \includegraphics[width=0.9\textwidth]{role_diagram.pdf}
-%\label{fig:architecture}
-%\end{figure}
+\label{fig:architecture}
+\caption{Architecture diagram : Obscore extension relies on the Obscore main table and adds more features about radio properties of the data. }
+\end{figure}
 
 % Mireille : it seems this is not the good diagram but the one of SIA
 % change architexture diag
