--- a/Appendix.tex
+++ b/Appendix.tex
@@ -66,7 +66,7 @@ Show me all datasets satisfying: \\
 I. Target name = 3C 48 \\
 II. obs\_collection = ?INAF-Medicina, single dish?\\
 III. Observed frequency in the range 20-21 GHz \\
-IV. dataproduct\_type = spatial\_profile or dataproduct\_type = map\\
+IV. dataproduct\_type = spatial\_profile or scan\_mode = map\\
 V. 51544 < observation time (MJD) < 60309 \\
 \begin{verbatim}
 SELECT * FROM ivoa.ObscoreRadioExtended
@@ -78,7 +78,7 @@ target_name = '3C48' AND
 \end{verbatim}
 
 \subsection{Use case - f\_resolution, f\_min, f\_max}
-\textit{Select any cube with spectral resolution better than 1 MHz and spectral range inside the 1 to 1.5 GHz band.}
+\textit{Select any cube with spectral resolution better than 1 MHz and spectral range inside the 1 to 1.5 GHz band (around HI 21 cm line).}
 
 Show me all datasets satisfying:\\
 I. Product type is cube \\
@@ -92,13 +92,24 @@ f_min > 1.0 e+9 AND
 f_max < 1.5e+9
 \end{verbatim}
 
+\subsection{Use case  frequency selection  for images }
+\textit{Any low frequency image or cube  defined as smaller than 1 Ghz.}\\ \\
+Show me all datasets satisfying:\\
+I. Product type is image or cube \\
+II. higher spectral limit < 1Ghz
+\begin{verbatim}
+      SELECT * FROM ivoa.ObscoreRadioExtended
+      WHERE (dataproduct_type = 'image' OR
+      dataproduct_type = 'cube') AND
+      f_max  < 1e9
+\end{verbatim}
 % Mireille Louys: shall we also look for spectra with these frequency constrains ? 
 
 
  
 % end section Alexandra's science case 
 
-\subsection{FB : Use case 1.1 data product and targer object selection }
+\subsection{ visibility data product and targer object selection }
 \textit{Any raw interferometry observation containing target Fornax cluster.}\\
 \\
 Show me all  observation identifiers satisfying:\\
@@ -109,44 +120,12 @@ II. Target Name = Fornax Cluster \\
       WHERE dataproduct_type = 'visibility'
       target_name = 'Fornax cluster'
 \end{verbatim}
-\subsection{Use case 1.2}
-\textit{Any  dataset with minimum field of view larger than 0.5 degree.}\\
-\\
-Show me all datasets satisfying:\\
-I. Minimum FOV > 0.5 deg \\
-\begin{verbatim}
-      SELECT * FROM ivoa.ObscoreRadioExtended
-      WHERE fov_min > 0.5 
-\end{verbatim}
 
-\subsection{Use case 1.3/ time selection }
-\textit{Any cube  with absolute spectral resolution better than 1 Mhz and spectral range inside the 1 to 1.5 Ghz band.}\\ \\
-Show me all datasets satisfying:\\
-I. Product type is cube \\
-II. spectral resolution better than 1Mhz \\
-III. lower spectral limit > 1Ghz \\
-IV. higher spectral limit < 1.5Ghz 
-\begin{verbatim}
-      SELECT * FROM ivoa.ObscoreRadioExtended
-      WHERE dataproduct_type = 'cube' AND
-      f_resolution < 1000 AND
-      f_min > 1000 AND
-      f_max < 1500
-\end{verbatim} 
 
-\subsection{Use case 1.4 / freq selection }
-\textit{Any low frequency image or cube  defined as smaller than 1 Ghz.}\\ \\
-Show me all datasets satisfying:\\
-I. Product type is image or cube \\
-II. higher spectral limit < 1Ghz
-\begin{verbatim}
-      SELECT * FROM ivoa.ObscoreRadioExtended
-      WHERE (dataproduct_type = 'image' OR
-      dataproduct_type = 'cube') AND
-      f_max  < 1000
-\end{verbatim}
 
-\subsection{Use case 1.5 / scale selection}
+
+
+\subsection{Use case : maximum angular scale selection}
 \textit{Any visibility dataset  where  maximum angular scale is larger than 0.5degrees.}\\ \\
 Show me all datasets satisfying:\\
 I. Product type is visibility \\
@@ -157,7 +136,37 @@ II. Maximum angular scale  >  0.5 deg
       max_angular_scale > 0.5 
 \end{verbatim}
 
-\subsection{Use case 1.6 / instrument type and mode selection }
+\subsection{Use case : uv distribution selection}
+\textit{Any visibility data of good quality from th uv distribution point of view.}\\ \\
+Show me all datasets satisfying:\\
+I. Product type = visibility \\
+II. uv distribution filling factor  > 0.7 \\
+III. uv distribtion factor eccentricity  < 0.1 \\
+
+\begin{verbatim}
+      SELECT * FROM ivoa.ObscoreRadioExtended
+      WHERE dataproduct_type = 'visibilty' AND
+      uv_distribution_fill > 0.7 AND
+      uv_distribution_ecc < 0.1  
+\end{verbatim}
+
+\subsection{Use case :  time selection }
+\textit{Any timeseries obtained in beam forming mode with time resolution better than 0.1 second and time sample maximal duration smaller than 0.05 second. }\\ \\
+Show me all datasets satisfying:\\
+I. Instrument type = beam forming\\
+II. Product type = time series  \\
+III. time resolution < 0.1 s\\
+IIV. maximal duration per sample  < 0.05 s \\
+
+\begin{verbatim}
+      SELECT * FROM ivoa.ObscoreRadioExtended
+      WHERE instrument_type = 'beamForming' AND
+      dataproduct_type = 'timeseries' AND
+      t_resolution < 0.1 AND
+      t_exp_max < 0.05 
+\end{verbatim}
+
+\subsection{Use case:  instrument type and mode selection }
 \textit{Any single dish  dataset  in raster mode around 3C 273.}\\ \\
 Show me all datasets satisfying:\\
 I. Instrument type is Single dish \\
@@ -173,7 +182,7 @@ IV. position inside 3 arcmin around  	187.2779159404900 +02.0523882305500
 \end{verbatim}
 
 % use case FB 
-\subsection{Use case 1.7 instrument type selection}
+\subsection{Use case: instrument type selection}
 \textit{Any single dish or beam forming dataset  with spectral range inside the 500 Mhz - 1Ghz band and in the Coma Cluster.}\\ \\
 Show me all datasets satisfying:\\
 I. Instrument type is Single dish or beam forming \\
@@ -188,7 +197,7 @@ IV. position inside 18 arcmin around 194.93502 +27.91246
 \end{verbatim}
 
 
-\subsection{Use case 1.8 instrument type and freq selection }
+\subsection{Use case  instrument type and frequency selection }
 \textit{Any single dish or beam forming dataset  with spectral range inside the 500 Mhz - 1Ghz band and in the Coma Cluster.}\\ \\
 Show me all datasets satisfying:\\
 I. Instrument type is Single dish or beam forming \\
@@ -206,22 +215,9 @@ IV. position inside 18 arcmin around 194.93502 +27.91246
 \end{verbatim}
 
 
-\subsection{Use case 1.9 uv distribution selection}
-\textit{Any visibility data of good quality from th uv distribution point of view.}\\ \\
-Show me all datasets satisfying:\\
-I. Product type = visibility \\
-II. uv distribution filling factor  > 0.7 \\
-III. uv distribtion factor eccentricity  < 0.1 \\
-
-\begin{verbatim}
-      SELECT * FROM ivoa.ObscoreRadioExtended
-      WHERE dataproduct_type = 'visibilty' AND
-      uv_distribution_fill > 0.7 AND
-      uv_distribution_ecc < 0.1  
-\end{verbatim}
 
 
-\subsection{Use case 1.10 -instrument parameters selection }
+\subsection{Use case: instrument parameters selection }
 \textit{Any interferometry data of good quality and significant spatial resolution from the instrumental point of view. }\\ \\
 Show me all datasets satisfying:\\
 I. Instrument type = visibility \\
@@ -236,18 +232,4 @@ III. antenna maximum distance in meters  > 5000 \\
 \end{verbatim}
 
 
-\subsection{Use case 1.11 - time selection }
-\textit{Any timeseries obtained in beam forming mode with time resolution better than 0.1 second and time sample maximal duration smaller than 0.05 second. }\\ \\
-Show me all datasets satisfying:\\
-I. Instrument type = beam forming\\
-II. Product type = time series  \\
-III. time resolution < 0.1 s\\
-IIV. maximal duration per sample  < 0.05 s \\
 
-\begin{verbatim}
-      SELECT * FROM ivoa.ObscoreRadioExtended
-      WHERE instrument_type = 'beamForming' AND
-      dataproduct_type = 'timeseries' AND
-      t_resolution < 0.1 AND
-      t_exp_max < 0.05 
-\end{verbatim}
