--- a/Appendix.tex
+++ b/Appendix.tex
@@ -127,14 +127,15 @@ II. Target Name = Fornax Cluster \\
 
 
 \subsection{Use case : maximum angular scale selection}
-\textit{Any visibility dataset  where  maximum angular scale is larger than 0.5degrees.}\\ \\
+\textit{Any visibility dataset around FRB 121102  where  maximum angular scale is larger than 1 minute .}\\ \\
 Show me all datasets satisfying:\\
 I. Product type is visibility \\
-II. Maximum angular scale  >  0.5 deg 
+II. Maximum angular scale  >  0.018 deg 
 \begin{verbatim}
       SELECT * FROM ivoa.ObscoreRadioExtended
       WHERE dataproduct_type = 'visibility' AND
-      max_angular_scale > 0.5 
+      max_angular_scale > 0.018 AND
+      CONTAINS(POINT(s_ra,s_dec),CIRCLE(82.99458, 33.14794,0.0003)) = 1))
 \end{verbatim}
 
 \subsection{Use case : uv distribution selection}
@@ -166,7 +167,7 @@ IIV. maximal duration per sample  < 0.05 s \\
       t_resolution < 0.1 AND
       t_exp_max < 0.05 
 \end{verbatim}
-
+\todo{Below : instrument and observing modes parameters. To be completed by science cases}
 \subsection{Use case:  instrument type and mode selection }
 \textit{Any single dish  dataset  in raster mode around 3C 273.}\\ \\
 Show me all datasets satisfying:\\
